refactor (Numbers): Enhance comments (#28)
* refactor (Numbers): Enhance comments